# plex_api

./: .env.example  .gitignore  Cargo.toml  rustfmt.toml  t.json
.github/workflows/: format_and_fix.yaml  rust-clippy.yml  test.yml
examples/: example.rs
src/: info.rs  lib.rs  library.rs  main.rs
