[package]
edition = "2021"
name = "plex_api"
version = "0.1.0"

[lib]
name = "plex_api"
path = "src/lib.rs"

[[bin]]
name = "run_plex_api"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.10", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
