[package]
edition = "2021"
name = "plex_api"
version = "0.1.0"

[lib]
name = "plex_api"
path = "src/lib.rs"

[[example]]
name = "example"

[dependencies]
reqwest = {version = "0.11.10", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
dotenv = "0.15.0"
